--- a/v.css
+++ b/v.css
@@ -1,4 +1,7 @@
-
+*{
+    margin: 0px;
+    padding: 0px;
+}
 #container{ 
     display: flex;
     justify-content:center;
@@ -57,7 +60,7 @@ a{
     
 }
 .links .frg {
-    color: green;
+    color: rgb(0, 253, 0);
     padding-left: 1.5rem;
 }
 
