--- a/jimin.css
+++ b/jimin.css
@@ -24,13 +24,14 @@
     display:flex;
     align-items: center;
 }
-input{
+.form-input{
     padding: 0.35rem;
     width: 280px;
     border-radius:5px;
     border-color: rgb(176, 176, 176);
     margin: 0.35rem;
 }
+
 p{
     color: rgb(0, 0, 82) ;
 }
@@ -39,9 +40,16 @@ button{
     padding: 0.35rem;
     width: 290px;
     border-radius: 5px;
+}
+.login-button{
     border-color: rgb(0, 0, 82) ;
     background-color: rgb(0, 0, 82);
     color: white;
+}
+.google-login-button{
+    border-color: rgb(0, 0, 82) ;
+    background-color: white;
+    color: rgb(0, 0, 82);
 }
 .ap{
     display: flex;
@@ -57,4 +65,65 @@ h2{
 a{
     text-decoration: none;
     color: rgb(0, 56, 151);
+}
+.line-container{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+.line-container > div{
+    padding: 0.35rem;
+    width: 290px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+.line{
+    height: 1px;  
+    background: black;
+    width: 100%;
+    margin: 5px;
+}
+.remember{
+    display: flex;
+    align-items: center;
+    justify-content: baseline;
+}
+.remember >div{
+    display: flex;
+    flex-direction: row;
+}
+
+.toggle-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position:fixed;
+    margin-top: 11px;
+    margin-right: 10px;
+}
+
+.togggle-icon{
+    position: absolute;
+    pointer-events: none;
+    width: 20px;
+    height: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: none;
+}
+.toggle-button{
+    opacity: 0;
+    width: 20px;
+    height: 20px;
+}
+/* .toggle-button:checked ~ .togggle-icon{
+    background: rgb(255, 192, 246);
+} */
+.password-field{
+    display: flex;
+    align-items: end;
+    flex-direction: column;
 }
